# cpp-clean-arch-en

Cpp/CodeAlong/Extras/: 01 Adventure Game Pitch.cpp  02 Use Cases.cpp
Cpp/CodeAlong/Intro/: 01 Welcome.cpp  03 Development Environments.cpp  04 Visual Studio.cpp  05 Visual Studio Code.cpp  07 Docker Intro.cpp  08 Docker for Notebooks.cpp  09 Devcontainers.cpp  11 Working with Notebooks.cpp
Cpp/CodeAlong/Week-1/: 03 Adventure Game Introduction.cpp  05 GRASP Creator.cpp  07 Workshop Introduction.cpp  12 Concrete Factory and Builder.cpp  13 SRP Solutions.cpp
Cpp/CodeAlong/Week-2/: 01 Adventure Connections.cpp  04 SOLID Open-Closed Principle.cpp  04 SRP and High Cohesion.cpp  05 Concrete Factory and Builder.cpp  06 SRP Solutions.cpp  07 GoF Strategy Pattern.cpp  08 SRP Workshop.cpp  09 Adventure Pawn.cpp  09 GoF Adapter Pattern.cpp  10 SOLID Open-Closed Principle.cpp  11 GoF Patterns.cpp  12 GoF Strategy Pattern.cpp
Cpp/CodeAlong/Week-3/: 01 GoF Patterns.cpp  01 GoF Template Method Pattern.cpp  02 GoF Adapter Pattern.cpp  03 GoF Strategy Pattern.cpp  03 SOLID OCP (Part 2).cpp  04 GoF Template Method Pattern.cpp  04 SOLID Dependency Inversion Principle.cpp  05 GoF Adapter Pattern.cpp  05 SOLID Interface Segregation Principle.cpp  06 GoF Command Pattern.cpp  06 SOLID OCP (Part 2).cpp  08 SOLID Interface Segregation Principle.cpp  09 GoF Command Pattern.cpp  09 SOLID Dependency Inversion Principle.cpp  10 Adventure Command Pattern.cpp  11 Adventure Strategy Pattern.cpp  11 GoF Prototype Pattern.cpp  12 GoF Proxy Pattern.cpp  12 SOLID Dependency Inversion Principle.cpp  13 GRASP Pure Fabrication.cpp  14 GoF Builder Pattern.cpp  14 RAII.cpp  15 GoF Abstract Factory Pattern.cpp  16 GoF Prototype Pattern.cpp  17 GoF Bridge Pattern.cpp  17 GoF Builder Pattern.cpp  19 RAII.cpp  20 GoF Bridge Pattern.cpp  21 Streams.cpp  22 RAII.cpp
Cpp/CodeAlong/Week-4/: 05 GoF Mediator Pattern.cpp  06 GRASP Indirection.cpp  06 GoF Chain of Responsibility Pattern.cpp  09 The Pimple Idiom.cpp  10 The Static Strategy Pattern.cpp  11 The Curiously Recurring Template Pattern (CRTP).cpp  11 The Static Strategy Pattern.cpp  13 Final Workshop.cpp
Cpp/CodeAlong/Woche-1/: 05 GRASP Creator.cpp  09 GRASP Low Coupling.cpp  11 SRP and High Cohesion.cpp
Cpp/CodeAlong/Woche-2/: 02 SRP Workshop.cpp  05 GoF Patterns.cpp  08 GoF Template Method Pattern.cpp  10 SOLID OCP (Part 2).cpp  12 SOLID Interface Segregation Principle.cpp
Cpp/CodeAlong/Woche-3/: 01 GoF Command Pattern.cpp  09 GoF Builder Pattern.cpp  13 Streams.cpp
Cpp/CodeAlong/Woche-4/: 01 GoF Observer Pattern.cpp  03 GRASP Controller.cpp  07 GRASP Indirection.cpp  09 GRASP Summary.cpp
Cpp/Slides/Extras/: 03 Memory Layout of Classes.cpp
Cpp/Slides/Intro/: 06 CLion.cpp  10 Docker Images.cpp  11 Working with Notebooks.cpp  12 Tips for Blended Learning.cpp
Cpp/Slides/Week-1/: 01 Software Architecture.cpp  08 Adventure Connections.cpp  10 Adventure Connection Graph (Short Version).cpp  10 Adventure Connection Graph.cpp  11 SRP and High Cohesion.cpp  12 Concrete Factory and Builder.cpp  13 SRP Solutions.cpp
Cpp/Slides/Week-2/: 02 GRASP Low Coupling.cpp  02 SRP Workshop.cpp  03 Adventure Connection Graph (Short Version).cpp  04 SOLID Open-Closed Principle.cpp  05 Concrete Factory and Builder.cpp  06 SRP Solutions.cpp  07 Adventure Recap.cpp  08 SRP Workshop.cpp  10 SOLID Open-Closed Principle.cpp  (+1 more)
Html/Slides/Woche-4/: 01 GoF Observer Pattern.html  07 GRASP Indirection.html  11 The Static Strategy Pattern.html  12 The Curiously Recurring Template Pattern (CRTP).html  CMakeLists.txt
code/: .clang-format  .editorconfig  .gitignore
code/completed/shared_memory/: CMakeLists.txt
(+424 files in other folders)
